# rag-local

./: .env.example  .gitignore  PLAN.md  pyproject.toml
src/rag_local/: __init__.py  config.py  main.py
src/rag_local/api/: app.py
src/rag_local/auth/: token.py
src/rag_local/bot/: discord_bot.py
src/rag_local/ingest/: chunker.py  parsers.py  pipeline.py
src/rag_local/llm/: provider.py
src/rag_local/rag/: engine.py
src/rag_local/retrieval/: hybrid.py
src/rag_local/store/: chroma.py  docstore.py
